@@ -6,3 +6,8 @@ MAINTAINERCLEANFILES = Makefile.in
 DISTCLEANFILES = 
 CLEANFILES = 
 EXTRA_DIST = 
+
+test:
+	./nhc-test $(srcdir) $(top_srcdir)
+
+.PHONY: test
